# discord_bot_azechi_01

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  Gemfile  main.rb
.github/workflows/: release.yml
app/: Gemfile  main.rb
src/: main.rs
