[package]
name = "discord_bot_azechi_01"
version = "0.1.0"
edition = "2021"

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
]

[dependencies.tokio]
version = "1.0"
features = [
  "macros",
  "rt-multi-thread",
  "signal",
]
